hw-04/kubernetes/app-chart/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app.kubernetes.io/name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
      - name: app-container
        image: id1234ht8/hw-04:0.0.1
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 5
        ports:
        - containerPort: 8000
          name: app-port
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 2
        volumeMounts:
          - name: app-configmap-volume
            mountPath: /etc/opt/app/
            readOnly: true
      volumes:
        - name: app-configmap-volume
          configMap:
            name: app-configmap
            items:
              - key: "application.yml"
                path: "application.yml"
