hw-04/kubernetes/app-chart/templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/name: app
  ports:
    - port: 8000
      targetPort: app-port
