hw-04/kubernetes/app-chart/templates/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host: arch.homework
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: app-service
               port:
                 number: 8000
   - host: prometheus.arch.homework
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: prometheus-server
               port:
                 number: 80
   - host: grafana.arch.homework
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: grafana
               port:
                 number: 3000
